upgrade to java 11 + upgrade libraries